# nautobot-app-ssot-forward

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  nautobot_config.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture-flow.md
docs/00_Project_Knowledge/: README.md
docs/03_Plans/active/: 2026-06-10-forward-nautobot-additional-ideas.md  2026-06-10-forward-nautobot-code-quality-next.md  2026-06-10-forward-nautobot-contract-matrix.md  2026-06-10-forward-nautobot-future-improvements.md  2026-06-10-forward-nautobot-implementation.md  2026-06-10-forward-nautobot-next-steps.md  2026-06-10-forward-nautobot-next-tranche.md  2026-06-10-forward-nautobot-scaffold.md  2026-06-10-forward-nautobot-scope-expansion.md  2026-06-11-forward-nautobot-full-model-coverage-plan.md  2026-06-11-forward-nautobot-future-improvements.md  2026-06-11-forward-nautobot-production-readiness-checklist.md  2026-06-12-forward-nautobot-release-hardening-goal.md  2026-06-13-forward-nautobot-async-nqe-execution.md  2026-06-17-forward-nautobot-perf-quality-improvements.md  2026-06-19-forward-netbox-parity-and-gitops.md  2026-06-23-diffsync-crud-redesign.md  2026-06-23-mutual-coverage-matrix.md  2026-06-23-release-0.3.0.md  2026-06-28-forward-netbox-learnings-backlog.md
forward_nautobot/: __init__.py  demo.py  fixture_support.py  forms.py  jobs.py  models.py  navigation.py  urls.py  views.py
forward_nautobot/api/: __init__.py
forward_nautobot/fixtures/: __init__.py  forward_sample_ingestion.json
forward_nautobot/integrations/: __init__.py
forward_nautobot/integrations/forward/: __init__.py  adapters.py  client.py  contract_diff.py  contrib_sync.py  diffsync_models.py  dry_run.py  exceptions.py  jobs.py  models.py  normalize.py  planner.py  registry.py  runner.py  support.py  write_contract.py  write_executor.py  write_path.py
forward_nautobot/integrations/forward/queries/: README.md  __init__.py  contracts.py  forward_cloud_accounts.nqe  forward_cloud_networks.nqe  forward_cloud_services.nqe  (+12 more)
forward_nautobot/management/: __init__.py
forward_nautobot/management/commands/: __init__.py  forward_demo_seed.py  forward_drift_export.py  forward_dry_run.py  forward_fixture_seed.py
forward_nautobot/migrations/: 0001_initial.py  0002_forwardconnectionprofile_last_snapshot_id.py  0003_forwardconnectionprofile_last_query_reference.py  0004_forwardconnectionprofile_last_query_mode.py  0005_forwardconnectionprofile_verify_tls.py  0006_forwardconnectionprofile_last_support_bundle_json.py
scripts/: check_contrib_idempotence.py  check_harness.py  check_query_contracts.py  check_release_state.py  check_sensitive_content.py  check_wheel_contents.py  ci_local.py  forward_dry_run.py  generate_contract_diff_report.py  grade_support_bundle.py  release.py
scripts/tests/: test_release.py
tests/: test_adapter.py  test_client.py  test_compatibility_fallback.py  test_configuration.py  test_contract_diff.py  test_contrib_sync.py  test_dry_run.py  test_fixture_ingestion.py  test_fixture_support.py  test_forms.py  test_live_ingestion.py  test_nautobot_job_refresh.py  test_normalize.py  test_planner.py  test_plugin.py  test_queries.py  test_registry.py  test_release_gates.py  test_release_workflow.py  test_runner.py  test_smoke.py  test_support.py  test_support_grader.py  test_target_adapter.py  test_views.py  test_write_contract.py  test_write_executor.py  test_write_path.py  test_write_path_rollup.py
tests/fixtures/: forward_ingestion_sample.json
