[tool.poetry]
name = "nautobot-app-ssot-forward"
version = "0.1.0"
description = "Forward Networks SSoT integration for Nautobot"
authors = ["Forward Networks"]
license = "MIT"
readme = "README.md"
packages = [{ include = "forward_nautobot" }]
include = [
    { path = "forward_nautobot/integrations/forward/queries/*.nqe", format = ["sdist", "wheel"] },
    { path = "forward_nautobot/integrations/forward/queries/README.md", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.11"
diffsync = ">=2.0,<3.0"
httpx = ">=0.27,<0.29"
nautobot = "^3.1"
nautobot-ssot = ">=4.4,<5.0"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2"
pytest = "^8.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: live Forward API tests that require credentials and network access",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
