[tool.poetry]
name = "nautobot-app-ssot-forward"
version = "0.2.0"
description = "Forward Networks SSoT integration for Nautobot"
authors = ["Forward Networks"]
license = "MIT"
readme = "README.md"
packages = [{ include = "forward_nautobot" }]
include = [
    { path = "forward_nautobot/integrations/forward/queries/*.nqe", format = ["sdist", "wheel"] },
    { path = "forward_nautobot/integrations/forward/queries/README.md", format = ["sdist", "wheel"] },
    { path = "forward_nautobot/fixtures/*.json", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.11"
diffsync = ">=2.0,<3.0"
httpx = ">=0.27,<0.29"
nautobot = "^3.1"
nautobot-ssot = ">=4.4,<5.0"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2"
pytest = "^8.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: live Forward API tests that require credentials and network access",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["forward_nautobot/integrations/forward/queries"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, UP pyupgrade, B bugbear.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by ruff-format, not enforced hard

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# Gate scripts insert REPO_ROOT on sys.path before importing the package.
"scripts/*" = ["E402"]
# Nautobot config files use `from nautobot.settings import *`.
"nautobot_config.py" = ["F403", "F405"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
